UPDATE: first test

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -7,16 +7,18 @@ project(${PROJECT_NAME} VERSION 1.0)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-#########
-# Testing
-#########
-option(BUILD_TESTING "Enable/Disable testing" ON)
+# #########
+# # Testing
+# #########
+# option(BUILD_TESTING "Enable/Disable testing" ON)
+# 
+# if(BUILD_TESTING)
+#     include(FetchContent)
+#     FetchContent_Declare(
+#         googletest
+#         URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+#         )
+#     FetchContent_MakeAvailable(googletest)
+# endif()
 
-if(BUILD_TESTING)
-    include(FetchContent)
-    FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
-        )
-    FetchContent_MakeAvailable(googletest)
-endif()
+add_subdirectory(libs/day1)
