UPDATE: test exception Also have test on the top level

--- a/y2015/libs/day1/test/CMakeLists.txt
+++ b/y2015/libs/day1/test/CMakeLists.txt
@@ -1,20 +1,20 @@
 project(testDay1)
 
+set(TEST_NAME TestDay1)
+
 #########
 # Testing
 #########
-option(BUILD_TESTING "Enable/Disable testing" ON)
+if (BUILD_TESTING)
+    if(BUILD_TESTING)
+        include(FetchContent)
+        FetchContent_Declare(
+            googletest
+            URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+            )
+        FetchContent_MakeAvailable(googletest)
+    endif()
 
-if(BUILD_TESTING)
-    include(FetchContent)
-    FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
-        )
-    FetchContent_MakeAvailable(googletest)
+    add_executable(${TEST_NAME} test.cpp)
+    target_link_libraries(${TEST_NAME} gtest_main D1_2015)
 endif()
-
-enable_testing()
-
-add_executable(Test test.cpp)
-target_link_libraries(Test gtest_main D1_2015)
