--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -7,18 +7,10 @@ project(${PROJECT_NAME} VERSION 1.0)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# #########
-# # Testing
-# #########
-# option(BUILD_TESTING "Enable/Disable testing" ON)
-# 
-# if(BUILD_TESTING)
-#     include(FetchContent)
-#     FetchContent_Declare(
-#         googletest
-#         URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
-#         )
-#     FetchContent_MakeAvailable(googletest)
-# endif()
+option(BUILD_TESTING "Enable/Disable testing" ON)
 
 add_subdirectory(libs/day1)
+if (BUILD_TESTING)
+    enable_testing()
+    add_test(NAME TestDay1 COMMAND TestDay1)
+endif()
