UPDATE: last floor

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -9,7 +9,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 option(BUILD_TESTING "Enable/Disable testing" ON)
 
-add_subdirectory(libs/day1)
+add_subdirectory(libs)
+
+add_executable(Day1 src/day1.cpp)
+target_link_libraries(Day1 PRIVATE D1_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
