UPDATE: basic functions day 2 ex 1

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -17,4 +17,5 @@ target_link_libraries(Day1 PRIVATE D1_2015)
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
+    add_test(NAME TestDay2 COMMAND TestDay2)
 endif()
