UPDATE: finish day 2

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -14,6 +14,9 @@ add_subdirectory(libs)
 add_executable(Day1 src/day1.cpp)
 target_link_libraries(Day1 PRIVATE D1_2015)
 
+add_executable(Day2 src/day2.cpp)
+target_link_libraries(Day2 PRIVATE D2_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
