UPDATE: Point working

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -21,4 +21,5 @@ if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
     add_test(NAME TestDay2 COMMAND TestDay2)
+    add_test(NAME TestDay3 COMMAND TestDay3)
 endif()
