--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -25,4 +25,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay1 COMMAND TestDay1)
     add_test(NAME TestDay2 COMMAND TestDay2)
     add_test(NAME TestDay3 COMMAND TestDay3)
+    add_test(NAME TestDay4 COMMAND TestDay4)
 endif()
