UPDATE: day 5 ex 1

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -23,10 +23,14 @@ target_link_libraries(Day3 PRIVATE D3_2015)
 add_executable(Day4 src/day4.cpp)
 target_link_libraries(Day4 PRIVATE D4_2015)
 
+add_executable(Day5 src/day5.cpp)
+target_link_libraries(Day5 PRIVATE D5_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
     add_test(NAME TestDay2 COMMAND TestDay2)
     add_test(NAME TestDay3 COMMAND TestDay3)
     add_test(NAME TestDay4 COMMAND TestDay4)
+    add_test(NAME TestDay5 COMMAND TestDay5)
 endif()
