UPDATE: day 6 ex 1

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -26,6 +26,9 @@ target_link_libraries(Day4 PRIVATE D4_2015)
 add_executable(Day5 src/day5.cpp)
 target_link_libraries(Day5 PRIVATE D5_2015)
 
+add_executable(Day6 src/day6.cpp)
+target_link_libraries(Day6 PRIVATE D6_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -33,4 +36,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay3 COMMAND TestDay3)
     add_test(NAME TestDay4 COMMAND TestDay4)
     add_test(NAME TestDay5 COMMAND TestDay5)
+    add_test(NAME TestDay6 COMMAND TestDay6)
 endif()
