--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -29,6 +29,9 @@ target_link_libraries(Day5 PRIVATE D5_2015)
 add_executable(Day6 src/day6.cpp)
 target_link_libraries(Day6 PRIVATE D6_2015)
 
+add_executable(Day7 src/day7.cpp)
+target_link_libraries(Day7 PRIVATE D7_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -37,4 +40,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay4 COMMAND TestDay4)
     add_test(NAME TestDay5 COMMAND TestDay5)
     add_test(NAME TestDay6 COMMAND TestDay6)
+    add_test(NAME TestDay7 COMMAND TestDay7)
 endif()
