UPDATE: first 2 functions

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -35,6 +35,9 @@ target_link_libraries(Day7 PRIVATE D7_2015)
 add_executable(Day8 src/day8.cpp)
 target_link_libraries(Day8 PRIVATE D8_2015)
 
+add_executable(Day9 src/day9.cpp)
+target_link_libraries(Day9 PRIVATE D9_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -45,4 +48,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay6 COMMAND TestDay6)
     add_test(NAME TestDay7 COMMAND TestDay7)
     add_test(NAME TestDay8 COMMAND TestDay8)
+    add_test(NAME TestDay9 COMMAND TestDay9)
 endif()
