--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -38,6 +38,9 @@ target_link_libraries(Day8 PRIVATE D8_2015)
 add_executable(Day9 src/day9.cpp)
 target_link_libraries(Day9 PRIVATE D9_2015)
 
+add_executable(Day10 src/day10.cpp)
+target_link_libraries(Day10 PRIVATE D10_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -49,4 +52,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay7 COMMAND TestDay7)
     add_test(NAME TestDay8 COMMAND TestDay8)
     add_test(NAME TestDay9 COMMAND TestDay9)
+    add_test(NAME TestDay10 COMMAND TestDay10)
 endif()
