--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -41,6 +41,9 @@ target_link_libraries(Day9 PRIVATE D9_2015)
 add_executable(Day10 src/day10.cpp)
 target_link_libraries(Day10 PRIVATE D10_2015)
 
+add_executable(Day11 src/day11.cpp)
+target_link_libraries(Day11 PRIVATE D11_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -53,4 +56,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay8 COMMAND TestDay8)
     add_test(NAME TestDay9 COMMAND TestDay9)
     add_test(NAME TestDay10 COMMAND TestDay10)
+    add_test(NAME TestDay11 COMMAND TestDay11)
 endif()
