--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -44,6 +44,9 @@ target_link_libraries(Day10 PRIVATE D10_2015)
 add_executable(Day11 src/day11.cpp)
 target_link_libraries(Day11 PRIVATE D11_2015)
 
+add_executable(Day12 src/day12.cpp)
+target_link_libraries(Day12 PRIVATE D12_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -57,4 +60,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay9 COMMAND TestDay9)
     add_test(NAME TestDay10 COMMAND TestDay10)
     add_test(NAME TestDay11 COMMAND TestDay11)
+    add_test(NAME TestDay12 COMMAND TestDay12)
 endif()
