UPDATE: day 13 - Build entry

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -47,6 +47,9 @@ target_link_libraries(Day11 PRIVATE D11_2015)
 add_executable(Day12 src/day12.cpp)
 target_link_libraries(Day12 PRIVATE D12_2015)
 
+add_executable(Day13 src/day13.cpp)
+target_link_libraries(Day13 PRIVATE D13_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -61,4 +64,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay10 COMMAND TestDay10)
     add_test(NAME TestDay11 COMMAND TestDay11)
     add_test(NAME TestDay12 COMMAND TestDay12)
+    add_test(NAME TestDay13 COMMAND TestDay13)
 endif()
