UPDATE: day 14 ex 1

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -50,6 +50,9 @@ target_link_libraries(Day12 PRIVATE D12_2015)
 add_executable(Day13 src/day13.cpp)
 target_link_libraries(Day13 PRIVATE D13_2015)
 
+add_executable(Day14 src/day14.cpp)
+target_link_libraries(Day14 PRIVATE D14_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -65,4 +68,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay11 COMMAND TestDay11)
     add_test(NAME TestDay12 COMMAND TestDay12)
     add_test(NAME TestDay13 COMMAND TestDay13)
+    add_test(NAME TestDay14 COMMAND TestDay14)
 endif()
