--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -53,6 +53,9 @@ target_link_libraries(Day13 PRIVATE D13_2015)
 add_executable(Day14 src/day14.cpp)
 target_link_libraries(Day14 PRIVATE D14_2015)
 
+add_executable(Day15 src/day15.cpp)
+target_link_libraries(Day15 PRIVATE D15_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -69,4 +72,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay12 COMMAND TestDay12)
     add_test(NAME TestDay13 COMMAND TestDay13)
     add_test(NAME TestDay14 COMMAND TestDay14)
+    add_test(NAME TestDay15 COMMAND TestDay15)
 endif()
