--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -56,6 +56,9 @@ target_link_libraries(Day14 PRIVATE D14_2015)
 add_executable(Day15 src/day15.cpp)
 target_link_libraries(Day15 PRIVATE D15_2015)
 
+add_executable(Day16 src/day16.cpp)
+target_link_libraries(Day16 PRIVATE D16_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -73,4 +76,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay13 COMMAND TestDay13)
     add_test(NAME TestDay14 COMMAND TestDay14)
     add_test(NAME TestDay15 COMMAND TestDay15)
+    add_test(NAME TestDay16 COMMAND TestDay16)
 endif()
