--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -59,6 +59,9 @@ target_link_libraries(Day15 PRIVATE D15_2015)
 add_executable(Day16 src/day16.cpp)
 target_link_libraries(Day16 PRIVATE D16_2015)
 
+add_executable(Day17 src/day17.cpp)
+target_link_libraries(Day17 PRIVATE D17_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -77,4 +80,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay14 COMMAND TestDay14)
     add_test(NAME TestDay15 COMMAND TestDay15)
     add_test(NAME TestDay16 COMMAND TestDay16)
+    add_test(NAME TestDay17 COMMAND TestDay17)
 endif()
