UPDATE: day 18 ex 1

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -62,6 +62,9 @@ target_link_libraries(Day16 PRIVATE D16_2015)
 add_executable(Day17 src/day17.cpp)
 target_link_libraries(Day17 PRIVATE D17_2015)
 
+add_executable(Day18 src/day18.cpp)
+target_link_libraries(Day18 PRIVATE D18_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -81,4 +84,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay15 COMMAND TestDay15)
     add_test(NAME TestDay16 COMMAND TestDay16)
     add_test(NAME TestDay17 COMMAND TestDay17)
+    add_test(NAME TestDay18 COMMAND TestDay18)
 endif()
