--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -65,6 +65,9 @@ target_link_libraries(Day17 PRIVATE D17_2015)
 add_executable(Day18 src/day18.cpp)
 target_link_libraries(Day18 PRIVATE D18_2015)
 
+add_executable(Day19 src/day19.cpp)
+target_link_libraries(Day19 PRIVATE D19_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -85,4 +88,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay16 COMMAND TestDay16)
     add_test(NAME TestDay17 COMMAND TestDay17)
     add_test(NAME TestDay18 COMMAND TestDay18)
+    add_test(NAME TestDay19 COMMAND TestDay19)
 endif()
