--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -68,6 +68,9 @@ target_link_libraries(Day18 PRIVATE D18_2015)
 add_executable(Day19 src/day19.cpp)
 target_link_libraries(Day19 PRIVATE D19_2015)
 
+add_executable(Day20 src/day20.cpp)
+target_link_libraries(Day20 PRIVATE D20_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -89,4 +92,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay17 COMMAND TestDay17)
     add_test(NAME TestDay18 COMMAND TestDay18)
     add_test(NAME TestDay19 COMMAND TestDay19)
+    add_test(NAME TestDay20 COMMAND TestDay20)
 endif()
