UPDATE: strat day 21

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -71,6 +71,9 @@ target_link_libraries(Day19 PRIVATE D19_2015)
 add_executable(Day20 src/day20.cpp)
 target_link_libraries(Day20 PRIVATE D20_2015)
 
+add_executable(Day21 src/day21.cpp)
+target_link_libraries(Day21 PRIVATE D21_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -93,4 +96,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay18 COMMAND TestDay18)
     add_test(NAME TestDay19 COMMAND TestDay19)
     add_test(NAME TestDay20 COMMAND TestDay20)
+    add_test(NAME TestDay21 COMMAND TestDay21)
 endif()
