--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Debug)
+endif()
+
 # Variables
 set(PROJECT_NAME y2015)
 
