UPDATE: first day 23

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -78,6 +78,9 @@ target_link_libraries(Day20 PRIVATE D20_2015)
 add_executable(Day21 src/day21.cpp)
 target_link_libraries(Day21 PRIVATE D21_2015)
 
+add_executable(Day23 src/day23.cpp)
+target_link_libraries(Day23 PRIVATE D23_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -101,4 +104,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay19 COMMAND TestDay19)
     add_test(NAME TestDay20 COMMAND TestDay20)
     add_test(NAME TestDay21 COMMAND TestDay21)
+    add_test(NAME TestDay23 COMMAND TestDay23)
 endif()
