--- a/y2015/libs/CMakeLists.txt
+++ b/y2015/libs/CMakeLists.txt
@@ -19,4 +19,5 @@ add_subdirectory(day18)
 add_subdirectory(day19)
 add_subdirectory(day20)
 add_subdirectory(day21)
+add_subdirectory(day23)
 add_subdirectory(utils)
