UPDATE: start day 22

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -81,6 +81,9 @@ target_link_libraries(Day21 PRIVATE D21_2015)
 add_executable(Day23 src/day23.cpp)
 target_link_libraries(Day23 PRIVATE D23_2015)
 
+add_executable(Day22 src/day22.cpp)
+target_link_libraries(Day22 PRIVATE D22_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -105,4 +108,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay20 COMMAND TestDay20)
     add_test(NAME TestDay21 COMMAND TestDay21)
     add_test(NAME TestDay23 COMMAND TestDay23)
+    add_test(NAME TestDay22 COMMAND TestDay22)
 endif()
