UPDATE: start again https://github.com/matt-gretton-dann/advent-of-code-2015/blob/main/puzzle-22-01/main.cc#L135

--- a/y2015/libs/day22/CMakeLists.txt
+++ b/y2015/libs/day22/CMakeLists.txt
@@ -17,6 +17,6 @@ target_include_directories(${LIBRARY_NAME} PUBLIC
     $<INSTALL_INTERFACE:include>
     )
 
-target_link_libraries(${LIBRARY_NAME} utils gtest_main)
+target_link_libraries(${LIBRARY_NAME} utils)
 
 add_subdirectory(test)
