UPDATE: start day 24

--- a/y2015/CMakeLists.txt
+++ b/y2015/CMakeLists.txt
@@ -84,6 +84,9 @@ target_link_libraries(Day23 PRIVATE D23_2015)
 add_executable(Day22 src/day22.cpp)
 target_link_libraries(Day22 PRIVATE D22_2015)
 
+add_executable(Day24 src/day24.cpp)
+target_link_libraries(Day24 PRIVATE D24_2015)
+
 if (BUILD_TESTING)
     enable_testing()
     add_test(NAME TestDay1 COMMAND TestDay1)
@@ -109,4 +112,5 @@ if (BUILD_TESTING)
     add_test(NAME TestDay21 COMMAND TestDay21)
     add_test(NAME TestDay23 COMMAND TestDay23)
     add_test(NAME TestDay22 COMMAND TestDay22)
+    add_test(NAME TestDay24 COMMAND TestDay24)
 endif()
